tests/cases/error/error-missing-include-level-2.rapt
# line 1
INCLUDE test/error-missing-include.rapt
# line 3